# prodigy-recipes

./: .gitignore  README.md  pyproject.toml
prodigy_recipes/: __init__.py  ocr_eval.js  ocr_eval.py
